8195828: [Nestmates] Remove leftover changes to invokespecial handling that are not needed

Reviewed-by: acorn